<resources>
    <string name="app_name">PriceApp</string>
    <string name="add_product_title">Add Product</string>
    <string name="btn_upload">Upload</string>
    <string name="nama_produk_title">Product Name</string>
    <string name="price_product">Product Price</string>
    <string name="price_recommendation">Price Recommendation</string>
    <string name="star">*</string>
    <string name="title_recommendation1">Tupperware Bottle</string>
    <string name="price_recommendation1">50.000</string>
    <string name="title_recommendation2">Mini Bottle</string>
    <string name="price_recommendation2">20.000</string>
    <string name="title_recommendation3">Large Bottle</string>
    <string name="price_recommendation3">100.000</string>
    <string name="desc_title">Product Description</string>
    <string name="btn_submit">Submit</string>
    <string name="dashboard_seller">Dashboard Seller</string>
    <string name="name_seller">Random Shop</string>
    <string name="address_seller">Jln. Sleman, Yogyakarta</string>
    <string name="price_min">Minimal Price</string>
    <string name="price_max">Maximal Price</string>
    <string name="cost_label">Cost</string>
    <string name="dummy_category">T-Shirt</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_market">Market</string>
    <string name="item">Item</string>
    <string name="category">Category</string>
    <string name="logout">Logout</string>
    <string name="title_login">Hello, Lets Login!</string>
    <string name="subtitle_login">Find out your best price with this new e-commerce platform and understand the highest potential selling price for your goods</string>
    <string name="login_label">Login</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="dont_have_any_account">Dont have any account?</string>
    <string name="register_label">Register</string>
    <string name="product_number_label">Product Number</string>
    <string name="get_price">Get Price!</string>
    <string name="title_register">Create your account</string>
    <string name="subtitle_register">Are you new? Lets create an account for you</string>
    <string name="email_label">Email</string>
    <string name="already_have_account">Already have account?</string>
    <string name="login_as_user">Login as user</string>
    <string name="name_label">Name</string>
    <string name="address_label">Address</string>
    <string name="update">Update</string>
    <string name="rata_rata">Harga rata-rata</string>
    <string name="dummy_price">100000</string>
    <string name="modal_label">Modal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>


    <string-array name="product_number">
        <item>66543</item>
        <item>1132</item>
        <item>4425</item>
        <item>2144</item>
        <item>2176</item>
        <item>0923</item>
    </string-array>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
<!--    <string name="default_web_client_id">650233047032-n9ukjglic7oihsrgdh0egmpjesk7fln3.apps.googleusercontent.com</string>-->
</resources>
