<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AddProduct">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/light_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_preview"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="32dp"
            android:src="@drawable/ilustration_upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_upload"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_preview" />

        <TextView
            android:id="@+id/product_name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            android:text="@string/nama_produk_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_upload" />


        <EditText
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:hint="@string/nama_produk_title"
            android:inputType="text"
            android:padding="14dp"
            app:layout_constraintEnd_toEndOf="@+id/product_name_title"
            app:layout_constraintStart_toStartOf="@+id/product_name_title"
            app:layout_constraintTop_toBottomOf="@+id/product_name_title" />

        <TextView
            android:id="@+id/price_product_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/price_product"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_name" />

        <TextView
            android:id="@+id/price_max_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/price_max"
            app:layout_constraintTop_toBottomOf="@+id/price_product_title"
            tools:layout_editor_absoluteX="32dp" />

        <EditText
            android:id="@+id/price_product_max"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:hint="@string/nama_produk_title"
            android:inputType="text"
            android:padding="14dp"
            app:layout_constraintEnd_toEndOf="@+id/price_max_label"
            app:layout_constraintStart_toStartOf="@+id/price_max_label"
            app:layout_constraintTop_toBottomOf="@+id/price_max_label" />

        <TextView
            android:id="@+id/min_price_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/price_min"
            app:layout_constraintTop_toBottomOf="@+id/price_product_max"
            tools:layout_editor_absoluteX="32dp" />

        <EditText
            android:id="@+id/price_product_min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:hint="@string/nama_produk_title"
            android:inputType="text"
            android:padding="14dp"
            app:layout_constraintEnd_toEndOf="@+id/min_price_label"
            app:layout_constraintStart_toStartOf="@+id/min_price_label"
            app:layout_constraintTop_toBottomOf="@+id/min_price_label" />

        <TextView
            android:id="@+id/cost_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cost_label"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="32dp"
            app:layout_constraintTop_toBottomOf="@+id/price_product_min" />

        <EditText
            android:id="@+id/cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:hint="@string/nama_produk_title"
            android:inputType="text"
            android:padding="14dp"
            app:layout_constraintEnd_toEndOf="@+id/cost_label"
            app:layout_constraintStart_toStartOf="@+id/cost_label"
            app:layout_constraintTop_toBottomOf="@+id/cost_label" />

        <TextView
            android:id="@+id/title_price_recommendation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_recommendation"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@+id/price_product_max"
            app:layout_constraintTop_toBottomOf="@+id/cost" />

        <TextView
            android:id="@+id/star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star"
            android:textColor="@color/red_star"
            android:layout_marginLeft="4dp"
            app:layout_constraintStart_toEndOf="@+id/title_price_recommendation"
            app:layout_constraintTop_toTopOf="@+id/title_price_recommendation" />

        <TextView
            android:id="@+id/recommendation1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_recommendation1"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@+id/title_price_recommendation"
            app:layout_constraintTop_toBottomOf="@+id/title_price_recommendation" />

        <TextView
            android:id="@+id/price_recommendation1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/price_recommendation1"
            app:layout_constraintEnd_toEndOf="@+id/price_product_max"
            app:layout_constraintTop_toTopOf="@+id/recommendation1" />

        <TextView
            android:id="@+id/recommendation2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            tools:text="@string/title_recommendation2"
            app:layout_constraintStart_toStartOf="@+id/title_price_recommendation"
            app:layout_constraintTop_toBottomOf="@+id/recommendation1" />

        <TextView
            android:id="@+id/price_recommendation2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/price_recommendation2"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="@+id/price_product_max"
            app:layout_constraintTop_toBottomOf="@+id/price_recommendation1" />

        <TextView
            android:id="@+id/recommendation3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            tools:text="@string/title_recommendation3"
            app:layout_constraintStart_toStartOf="@+id/title_price_recommendation"
            app:layout_constraintTop_toBottomOf="@+id/recommendation2" />

        <TextView
            android:id="@+id/price_recommendation3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            tools:text="@string/price_recommendation3"
            app:layout_constraintEnd_toEndOf="@+id/price_product_max"
            app:layout_constraintTop_toBottomOf="@+id/price_recommendation2" />

        <TextView
            android:id="@+id/desc_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/desc_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recommendation3" />

        <EditText
            android:id="@+id/desc_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:hint="@string/desc_title"
            android:inputType="text"
            android:padding="14dp"
            app:layout_constraintEnd_toEndOf="@+id/desc_title"
            app:layout_constraintStart_toStartOf="@+id/desc_title"
            app:layout_constraintTop_toBottomOf="@+id/desc_title" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/btn_submit"
            android:background="@drawable/rounded_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_product" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>